--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_usermeasurements.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_usermeasurements.xml
@@ -1,98 +1,95 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<?xml version="1.0" encoding="UTF-8"?>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+    tools:context=".UserMeasurements"
     android:background="@color/white"
-    tools:context=".UserMeasurements">
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <Button
-        android:id="@+id/makeoffer"
+    <Button android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
-        android:text="@string/vis_design"
-        app:backgroundTint="#BF8E55"
-        app:iconPadding="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        android:id="@+id/userheight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/m_l_angives_i_centimeter"
-        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:iconPadding="16dp"
+        app:backgroundTint="#BF8E55"
+        android:text="@string/vis_design"
+        android:layout_marginBottom="100dp"
+        android:id="@+id/makeoffer"/>
+
+    <EditText android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <EditText
-        android:id="@+id/userwidth"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/m_l_angives_i_centimeter"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/height_input"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
         android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/makeoffer"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:hint="@string/m_l_angives_i_centimeter"
+        android:ems="10"
+        android:autofillHints=""
+        android:layout_marginTop="1dp"/>
+
+    <EditText android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/width_input"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.0" />
+        android:inputType="number"
+        android:hint="@string/m_l_angives_i_centimeter"
+        android:ems="10" android:autofillHints=""
+        android:layout_marginTop="1dp"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintBottom_toTopOf="@+id/makeoffer"/>
 
-    <TextView
+    <TextView android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/indtast_bredden_p_v_ggen"
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto"
-        android:text="@string/indtast_bredten_p_v_ggen"
-        android:textAllCaps="true"
-        android:textColor="@color/black"
-        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/height_input"
+        app:layout_constraintVertical_bias="0.169"
         android:typeface="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userheight"
-        app:layout_constraintVertical_bias="0.169" />
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:textAllCaps="true"
+        android:fontFamily="@font/roboto"/>
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="300dp"
-        android:fontFamily="@font/roboto"
-        android:text="@string/indtast_h_jden_p_v_ggen"
-        android:textAllCaps="true"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.469"
+        android:layout_width="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.004" />
+        app:layout_constraintHorizontal_bias="0.469"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/indtast_h_jden_p_v_ggen"
+        android:id="@+id/textView3"
+        android:layout_marginTop="300dp"
+        app:layout_constraintVertical_bias="0.004"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:textAllCaps="true"
+        android:fontFamily="@font/roboto"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="260dp"
-        android:contentDescription="@string/afslut"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_width="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/logo1" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="260dp"
+        android:id="@+id/imageView5"
+        app:srcCompat="@drawable/logo1"
+        android:contentDescription="@string/afslut"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
